nuxt-dev-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nuxt-dev-service
spec:
  type: ClusterIP
  selector:
    app: nuxt-dev
  ports:
    - port: 3000
      targetPort: 3000
