nuxt-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nuxt-service
spec:
  type: ClusterIP
  selector:
    app: nuxt-app
  ports:
    - port: 80
      targetPort: 80
