nuxt-dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nuxt-dev-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ecip-dev.easycash.eg
      secretName: easycash-wildcard-cert  # 👈 your wildcard cert secret
  rules:
    - host: ecip-dev.easycash.eg
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nuxt-dev-service
                port:
                  number: 3000
