nuxt-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nuxt-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ecip-demo.easycash.eg
      secretName: easycash-wildcard-cert
  rules:
    - host: ecip-demo.easycash.eg
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nuxt-service
                port:
                  number: 80
